--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div class="container">
             <header class="header">
                 <img class="logo-black" src="img/Logo_Logitech_dark 1.png" alt="logo">
-                <img class="logo-white" src="img/Logo_Logitech 1.png" alt="logo">
-                <div class="menu__icon">
+                <div class="menu__burger">
                     <span></span>
                 </div>
-                <nav class="menu__body">
-                    <ul class="items">
-                        <li class="item">БЕЗ ПРОВОДОВ</li>
-                        <li class="item">ЗА ЛЮБЫМ СТОЛОМ</li>
-                        <li class="item">ОДНОВРЕМЕННО С НЕСКОЛЬКИХ УСТРОЙСТВ</li>
-                        <li class="item">С ИНДИВИДУАЛЬНЫМИ НАСТРОЙКАМИ</li>
-                        <li class="item">БЫСТРЕЕ,ЧЕМ КОГДА-ЛИБО</li>
-                        <li class="item">КОМФОРТНО. ЭРГОНОМИЧНО. ИНТУИТИВНО.</li>
+                <nav class="menu__list">
+                    <img class="logo-white" src="img/Logo_Logitech 1.png" alt="logo">
+                    <ul class="menu__list-items">
+                        <li class="title title-item"><a href="">БЕЗ ПРОВОДОВ</a> </li>
+                        <li class="title title-item"><a href="">А ЛЮБЫМ СТОЛОМ</a> </li>
+                        <li class="title title-item"><a href="">ОДНОВРЕМЕННО С НЕСКОЛЬКИХ УСТРОЙСТВ</a> </li>
+                        <li class="title title-item"><a href="">С ИНДИВИДУАЛЬНЫМИ НАСТРОЙКАМИ</a> </li>
+                        <li class="title title-item"><a href="">БЫСТРЕЕ,ЧЕМ КОГДА-ЛИБО</a> </li>
+                        <li class="title title-item"><a href="">КОМФОРТНО. ЭРГОНОМИЧНО. ИНТУИТИВНО.</a> </li>
                     </ul>
                 </nav>             
             </header>
@@ -39,7 +39,7 @@
             </div>  
         </div>
     </section>
-    <section class="second-page">
+    <!-- <section class="second-page">
         <div class="container">
             <img src="img/icon-bluetooth.png" alt="bluetooth" class="bluetooth-icon">
             <h2 class="title">БЕЗ ПРОВОДОВ</h2>
@@ -131,6 +131,7 @@
     </section>
     <footer class="footer">
         <p class="text footer__text"> Copyright © 2021 Logitech Все права защищены</p>
-    </footer>
+    </footer> -->
+<script src="index.js"></script>
 </body>
 </html>
