--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Logitech MX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
@@ -39,7 +39,7 @@
             </div>  
         </div>
     </section>
-    <!-- <section class="second-page">
+    <section class="second-page">
         <div class="container">
             <img src="img/icon-bluetooth.png" alt="bluetooth" class="bluetooth-icon">
             <h2 class="title">БЕЗ ПРОВОДОВ</h2>
@@ -64,11 +64,25 @@
                     <p class="text">точек на дюйм чувствительность датчика</p>
                 </div>
             </div>
-            <div class="second-page__slider">
-                <img class="slider__wood" src="img/wood.png" alt="wood">
+            <div class="three-page__slider">
+                <div class="slider-wrapper">
+                    <div class="slider-line">
+                        <img src="img/wood.png" alt="wood">
+                        <img src="img/glass.png" alt="glass">
+                        <img src="img/linoleum.png" alt="linoleum">
+                        <img src="img/cloth.png" alt="cloth">
+                        <img src="img/marble.png" alt="marble">
+                    </div>
+                </div>
                 <h5 class="title slider__title">Переключите поверхность</h5>
                 <div class="slider-nav">
-                    
+                    <button class="left"><img class="left" src="img/arrow-left.png" alt="arrow-left"></button>
+                    <img class="wood-texture" src="img/wood-texture.png" alt="wood-texture">
+                    <img class="glass-texture" src="img/wood-texture-2.png" alt="glass-texture">
+                    <img class="linoleum-texture" src="img/linoleum-texture.png" alt="linoleum-texture">
+                    <img class="cloth-texture" src="img/cloth-texture.png" alt="cloth-texture">
+                    <img class="marble-texture" src="img/marble-texture.png" alt="marble-texture">
+                    <button class="right"><img class="right" src="img/arrow-right.png" alt="arrow-right"></button>
                 </div>
             </div>
             <p class="text slider__text">Благодаря технологии Logitecch Darkfierd, MX Master 3 работаетна любой поверхности, даже на стекле.</p>
@@ -131,7 +145,7 @@
     </section>
     <footer class="footer">
         <p class="text footer__text"> Copyright © 2021 Logitech Все права защищены</p>
-    </footer> -->
+    </footer>
 <script src="index.js"></script>
 </body>
 </html>
