add slider five-page
add slider five-page
and centre web site

--- a/index.html
+++ b/index.html
@@ -111,12 +111,26 @@
     <section class="five-page">
         <div class="container">
             <h2 class="title five-page__title">С ИНДИВИДУАЛЬНЫМИ НАСТРОЙКАМИ</h2>
-            <text class="text five-page__text">Мышь MX Master 3 адаптируется под ваши рабочие процессы. Благодаря
-                индивидуальным настройкам, вы сможете настроить кнопки и жесты практически
-                под любое используемое приложение.</text>
-            <img src="img/f370c2e.png" alt="mouse" class="page-five__img">
+            <p class="text five-page__text">Мышь MX Master 3 адаптируется под ваши рабочие процессы. Благодаря индивидуальным настройкам, вы сможете настроить кнопки и жесты практически под любое используемое приложение.</p>
             <div class="five-page__slider">
-                
+                <div class="slider-line__wrapper">
+                    <div class="slider-line__mouse">
+                        <img src="img/01.png" alt="mouse">
+                        <img src="img/02.png" alt="mouse">
+                        <img src="img/03.png" alt="mouse">
+                        <img src="img/04.png" alt="mouse">
+                        <img src="img/05.png" alt="mouse">
+                        <img src="img/06.png" alt="mouse"> 
+                    </div>
+                </div>
+                <div class="five-page__nav">
+                    <span class="circle-slider one"></span>
+                    <span class="circle-slider two"></span>
+                    <span class="circle-slider three"></span>
+                    <span class="circle-slider four"></span>
+                    <span class="circle-slider five"></span>
+                    <span class="circle-slider six"></span>
+                </div>
             </div>
             <div class="five-page__box">
                 <div class="icon-apps">
@@ -125,8 +139,7 @@
                 <p class="text box__text">Начните работать продуктивнее с момента покупки — устройство
                     предварительно оптимизировано под популярные приложения
                     на Windows и Mac.</p>
-            </div>
-            
+            </div> 
         </div>
     </section>
     <section class="six-page">
