add tablet version
add tablet version 768px

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">   
+    <link rel="stylesheet" href="style.css">  
+    <!-- <link rel="stylesheet" href="normalize.css">  -->
 </head>
 <body>
     <section class="first-page">
@@ -33,21 +34,19 @@
             <div class="first-page__body">
                 <h2 class="title">РАБОТАЙТЕ ПРОДУКТИВНЕЕ</h2>
                 <p class="text first-page__text">Создана для эффективной работы, программирования и творчества</p>
-                <a href="" class="link">
+                <a href="#second" class="link">
                     <img class="arrow-link" src="img/arrow.png" alt="arrow">
                 </a>
             </div>  
         </div>
     </section>
-    <section class="second-page">
-        <div class="container">
+    <section class="second-page" id="second">
             <img src="img/icon-bluetooth.png" alt="bluetooth" class="bluetooth-icon">
             <h2 class="title">БЕЗ ПРОВОДОВ</h2>
             <p class="text second-page__text">Беспроводная мышь MX Master 3 работает без проводов до нескольких месяцев. Вы закроете приоритетные задачи прежде, чем понадобится подзарядка.</p>
             <div class="box-mouse">
                 <p class="text text-large">70 ДНЕЙ</p>
             </div>
-        </div>
     </section>
     <section class="three-page">
         <div class="container">
@@ -148,12 +147,12 @@
                 ЭРГОНОМИЧНО. ИНТУИТИВНО.</h2>
             <p class="text six-page__text">Дизайн мыши MX Master 3 разработан так, чтобы с точностью повторять форму вашей ладони. Но не менее важны колесико прокрутки для большого пальца
                 и расположение кнопок жестов, с которыми вы будете творить уверенно как никогда.</p>
-            <img src="img/image 1.jpg" alt="mouse">
-            <h2 class="title six-page__title">БЫСТРЕЕ, ЧЕМ КОГДА-ЛИБО</h2>
+            <img class="six-page__img" src="img/image 1.jpg" alt="mouse">
+            <h2 class="title six-page__title">БЫСТРЕЕ, <br> ЧЕМ КОГДА-ЛИБО</h2>
             <p class="text six-page__text">Компьютерная мышь MX Master 3 предлагает ультимативный механизм прокрутки
                 со скоростью 1000 строк за 1 секунду.
                 С точностью до пикселя. Бесшумно..</p>
-            <img src="img/image 2.jpg" alt="mouse">
+            <img class="six-page__img" src="img/image 2.jpg" alt="mouse">
         </div>
     </section>
     <footer class="footer">
