add desktop version 1920
add desktop version 1920 px

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <section class="first-page">
+        <div class="container">
             <header class="header">
                 <img class="logo-black" src="img/Logo_Logitech_dark 1.png" alt="logo">
                 <div class="menu__burger">
@@ -45,6 +46,8 @@
                     <img class="arrow-link" src="img/arrow.png" alt="arrow">
                 </a>
             </div>  
+        </div>
+            
     </section>
     <section class="second-page" id="second">
             <img src="img/icon-bluetooth.png" alt="bluetooth" class="bluetooth-icon">
