fix bag carousel
adaptive carousel

--- a/index.html
+++ b/index.html
@@ -159,39 +159,34 @@
                 <div class="slider-line__wrapper">
                     <div class="slider-line__mouse">
                         <picture>
-                            <source srcset="img/mouse_one-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_one-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_one-tablet.jpg" alt="mouse">
+                            <source srcset="img/mouse_one-mobile.png" media="(max-width: 894px)">
+                            <source srcset="img/mouse_one-tablet.png" media="(max-width: 1280px)">
+                            <img class="slider-img__large" src="img/mouse_one-tablet.png" alt="mouse">
                         </picture>
                         <picture>
-                            <source srcset="img/mouse_one-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_one-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_one-tablet.jpg" alt="mouse">
+                            <source srcset="img/mouse_two-mobile.png" media="(max-width: 894px)">
+                            <source srcset="img/mouse_two-tablet.png" media="(max-width: 1280px)">
+                            <img class="slider-img__small" src="img/mouse_two-tablet.png" alt="mouse">
                         </picture>
                         <picture>
-                            <source srcset="img/mouse_two-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_two-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_two-tablet.jpg" alt="mouse">
+                            <source srcset="img/mouse_three-mobile.png" media="(max-width: 894px)">
+                            <source srcset="img/mouse_three-tablet.png" media="(max-width: 1280px)">
+                            <img class="slider-img__small" src="img/mouse_three-tablet.png" alt="mouse">
                         </picture>
                         <picture>
-                            <source srcset="img/mouse_three-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_three-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_three-tablet.jpg" alt="mouse">
+                            <source srcset="img/mouse_four-mobile.png" media="(max-width: 894px)">
+                            <source srcset="img/mouse_four-tablet.png" media="(max-width: 1280px)">
+                            <img class="slider-img__small" class="slider-img__small" src="img/mouse_four-tablet.png" alt="mouse">
                         </picture>
                         <picture>
-                            <source srcset="img/mouse_four-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_four-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_four-tablet.jpg" alt="mouse">
+                            <source srcset="img/mouse_five-mobile.png" media="(max-width: 894px)">
+                            <source srcset="img/mouse_five-tablet.png" media="(max-width: 1280px)">
+                            <img class="slider-img__small" src="img/mouse_five-tablet.png" alt="mouse">
                         </picture>
                         <picture>
-                            <source srcset="img/mouse_five-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_five-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_five-tablet.jpg" alt="mouse">
-                        </picture>
-                        <picture>
-                            <source srcset="img/mouse_six-mobile.jpg" media="(max-width: 894px)">
-                            <source srcset="img/mouse_six-tablet.jpg" media="(max-width: 1280px)">
-                            <img src="img/mouse_six-tablet.jpg" alt="mouse">
+                            <source srcset="img/mouse_six-mobile.png" media="(max-width: 894px)">
+                            <source srcset="img/mouse_six-tablet.png" media="(max-width: 1280px)">
+                            <img class="slider-img__small" src="img/mouse_six-tablet.png" alt="mouse">
                         </picture>
                     </div>
                 </div>
